# toy_payments_engine

./: .gitignore  Cargo.toml  README.md
data/large/: 7_clients.csv  dataset_generator.rs
data/small/: edge_case_transactions.csv  invalid_transactions.csv  sample_transactions.csv  small_transaction.csv  transactions.csv  valid_transactions.csv
src/: engine.rs  lib.rs  main.rs  models.rs  utils.rs
tests/: engine_tests.rs  main_tests.rs  models_tests.rs  utils_tests.rs
