[package]
name = "toy_payments_engine"
version = "0.1.0"
edition = "2021"

[dependencies]
csv = "1.3.1"
csv-async = "1.3.0"
futures-util = "0.3.31"
indicatif = "0.17.9"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"
tempfile = "3.14.0"
tokio = { version = "1.42.0", features = ["full"] }
tokio-util = { version = "0.7.13", features = ["compat"] }
